# Orb

./: .dockerignore  .gitignore  404.html  DESIGN.md  LICENSE  Makefile  README.md  TODO.md  cliff.toml  compose.yaml  configuration.html  docker-compose.local.yml  docker-compose.yml  go.work  go.work.sum  index.html  installation.html  library-structure.html  mkdocs.yml  sitemap.xml  tauri.html  todo.html  todo.md  usage.html  zensical.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: docs.yml  release.yml
cmd/ingest/: go.mod  go.sum  main.go
db/: atlas.hcl  schema.sql
db/queries/: artists.sql  delete_albums_no_cover.sql  history.sql  ingest_state.sql  playlists.sql  queue.sql
docker/: Dockerfile  api.Dockerfile  entrypoint.sh  ingest.Dockerfile  nginx.conf  sentinel.conf  ui.Dockerfile
docs/: android-auto-emulator.md  configuration.md  home.md  index.md  installation.md  library-audiobooks.md  library-music.md  library-structure.md  tauri.md  todo.md  usage.md
pkg/config/: config.go  go.mod
pkg/kvkeys/: go.mod  keys.go
pkg/musicbrainz/: client.go  go.mod  image.go
pkg/objstore/: go.mod  s3.go
pkg/similarity/: go.mod  similarity.go
pkg/store/: go.mod  migrate.go  migrate.sql  models.go  store.go
scripts/: android-build.sh  android-ci-secrets.sh  android-install.sh  android-sign.sh  dev-keystore.jks  ios-build.sh  ios-install.sh  ios-sign.sh  windows-setup.ps1
search/: search_index.js  search_index.json
services/: go.mod  go.sum
services/api/: go.mod  go.sum
services/api/cmd/: main.go
services/cmd/: main.go
services/cmd/m4b_chapters/: main.go
services/db/: schema.sql
services/db/queries/: albums.sql  tracks.sql  users.sql
services/internal/activity/: activity.go
services/internal/admin/: admin.go
services/internal/auth/: auth.go
tauri-plugin-car/: Cargo.toml  TECHNICAL_ARCHITECTURE.md  build.rs
tauri-plugin-car/android/: build.gradle.kts
tauri-plugin-car/android/src/main/: AndroidManifest.xml
tauri-plugin-car/android/src/main/java/com/plugin/car/: CarMediaBrowserService.kt  CarPlugin.kt
tauri-plugin-car/guest-js/: index.ts
tauri-plugin-car/permissions/: default.toml
tauri-plugin-car/permissions/autogenerated/: reference.md
tauri-plugin-car/permissions/autogenerated/commands/: on_car_connected.toml  set_media_root.toml
tauri-plugin-car/permissions/schemas/: schema.json
tauri-plugin-car/src/: commands.rs  lib.rs  models.rs
tauri-plugin-mediasession/: Cargo.toml  build.rs
tauri-plugin-mediasession/android/: build.gradle.kts
tauri-plugin-mediasession/guest-js/: index.ts
tauri-plugin-mediasession/permissions/: default.toml
tauri-plugin-mediasession/src/: lib.rs
web/: .gitignore  capacitor.config.ts  package.json  vite.config.ts
web/src/: app.css  app.html  sw.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: android_bridge.rs  desktop.rs  lib.rs  main.rs
web/ui/: package-lock.json  package.json  vite.config.ts
web/ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
web/ui/src-tauri/icons/: icon.icns
web/ui/src-tauri/src/: lib.rs  main.rs
(+308 files in other folders)
