[package]
name = "orb"
version = "0.0.1"
edition = "2021"

[lib]
name = "orb_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
mdns-sd = "0.18"
discord-rich-presence = "1.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
once_cell = "1.21.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
