[package]
name = "orb"
version = "0.0.1"
edition = "2021"

[lib]
name = "orb_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
mdns-sd = "0.19"
discord-rich-presence = "1.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"
once_cell = "1.21.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.tauri]

[package.metadata.tauri-winres]
ProductName = "Orb"
FileDescription = "Orb App"
OriginalFilename = "orb.exe"
