[package]
name = "orb"
version = "0.1.0"
description = "Orb — self-hosted lossless music streaming"
authors = ["alexander-bruun"]
edition = "2021"

[lib]
name = "orb_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.11"
tokio = { version = "1", features = ["rt", "time"] }
